# bike-trip-tracker

./: .gitignore  Cargo.toml  Rocket.toml  justfile
migrations/: 20220204235126_trip_table.down.sql  20220204235126_trip_table.up.sql
sass/: style.scss
src/: api.rs  main.rs
static/scripts/: form.js
templates/: base.html.tera  index.html.tera
