[package]
name = "bike-trip-tracker"
version = "0.1.0"
authors = ["Amy Keibler <amelia.keibler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde = "1.0.136"
serde_json = "1.0.78"
